[gd_scene load_steps=4 format=3 uid="uid://dxrsr3qq0x5lp"]

[ext_resource type="Script" uid="uid://bqrxau7b4ssup" path="res://scripts/mainmenu.gd" id="1_85riq"]
[ext_resource type="Texture2D" uid="uid://cbchj4isndob4" path="res://assets/backgrounds/background_menu.png" id="1_natt5"]
[ext_resource type="FontFile" uid="uid://l0nqfp87alnk" path="res://assets/fonts/PressStart2P-Regular.ttf" id="2_r3g3c"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_85riq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_natt5")
expand_mode = 1

[node name="MainButtons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MainButtons"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MainButtons/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainButtons/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.721569, 0.196078, 1)
theme_override_colors/font_outline_color = Color(0.294118, 0.168627, 0.0745098, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("2_r3g3c")
theme_override_font_sizes/font_size = 60
text = "BURNOUT
"

[node name="HBoxContainer" type="HBoxContainer" parent="MainButtons"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainButtons/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Gioca" type="Button" parent="MainButtons/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 25)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_r3g3c")
theme_override_font_sizes/font_size = 35
text = "GIOCA"

[node name="Separator2" type="Control" parent="MainButtons/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Impostazioni" type="Button" parent="MainButtons/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 25)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_r3g3c")
theme_override_font_sizes/font_size = 35
text = "IMPOSTAZIONI"

[node name="Separator3" type="Control" parent="MainButtons/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Esci" type="Button" parent="MainButtons/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 25)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_r3g3c")
theme_override_font_sizes/font_size = 35
text = "ESCI
"

[node name="Separator4" type="Control" parent="MainButtons/HBoxContainer/VBoxContainer"]
layout_mode = 2

[connection signal="button_down" from="MainButtons/HBoxContainer/VBoxContainer/Gioca" to="." method="on_button_hovered"]
[connection signal="mouse_entered" from="MainButtons/HBoxContainer/VBoxContainer/Gioca" to="." method="_on_gioca_mouse_entered"]
[connection signal="button_down" from="MainButtons/HBoxContainer/VBoxContainer/Impostazioni" to="." method="on_button_hovered"]
[connection signal="mouse_entered" from="MainButtons/HBoxContainer/VBoxContainer/Impostazioni" to="." method="_on_impostazioni_mouse_entered"]
[connection signal="button_down" from="MainButtons/HBoxContainer/VBoxContainer/Esci" to="." method="on_button_hovered"]
[connection signal="mouse_entered" from="MainButtons/HBoxContainer/VBoxContainer/Esci" to="." method="_on_esci_mouse_entered"]
